[gd_scene load_steps=30 format=3 uid="uid://iorpodfv3lm7"]

[ext_resource type="Theme" uid="uid://c6d1evfkgvd7w" path="res://assets/ui/base_theme.tres" id="1_s8g4t"]
[ext_resource type="Script" uid="uid://d3py1qv2n7v7c" path="res://src/stages/main_menu.gd" id="2_806vh"]
[ext_resource type="PackedScene" uid="uid://ct0dj0herf2a6" path="res://src/ui/menus/dex/DexMenu.tscn" id="4_uc5nx"]
[ext_resource type="SpriteFrames" uid="uid://bp1p7w5a6c2eh" path="res://assets/spriteframes/death.tres" id="5_ic5we"]
[ext_resource type="Texture2D" uid="uid://cyb6f61mrfr78" path="res://assets/gfx/entities/boombox.png" id="5_vtifm"]
[ext_resource type="Texture2D" uid="uid://dhldjf6ten6bf" path="res://assets/ui/how_to_play/three_combo.png" id="5_xwlnd"]
[ext_resource type="FontFile" uid="uid://5fjm8mmidiqd" path="res://assets/ui/fonts/november.ttf" id="6_jscuh"]
[ext_resource type="PackedScene" uid="uid://2fbjapo3ufqi" path="res://src/stages/menus/options_menu.tscn" id="6_uc5nx"]
[ext_resource type="Texture2D" uid="uid://d18nh43rgr6j" path="res://assets/ui/how_to_play/four_combo.png" id="6_vtifm"]
[ext_resource type="Texture2D" uid="uid://dco0fxdevogyl" path="res://assets/ui/how_to_play/6_combo.png" id="7_bech7"]
[ext_resource type="Texture2D" uid="uid://bmdl0rikfovr6" path="res://assets/ui/keyboard_mouse/keyboard_arrow_down_outline.png" id="8_5867a"]
[ext_resource type="Texture2D" uid="uid://byyq3q2aeypwf" path="res://assets/ui/keyboard_mouse/keyboard_arrow_left_outline.png" id="9_5ec7j"]
[ext_resource type="Texture2D" uid="uid://ddi67ltr51plv" path="res://assets/ui/keyboard_mouse/keyboard_arrow_right_outline.png" id="10_xe83y"]
[ext_resource type="Texture2D" uid="uid://bmknbv3jeduny" path="res://assets/ui/keyboard_mouse/keyboard_arrow_up_outline.png" id="11_cbumv"]
[ext_resource type="Texture2D" uid="uid://dxs5urp4ysas5" path="res://assets/ui/keyboard_mouse/keyboard_a_outline.png" id="12_wiq5b"]
[ext_resource type="Texture2D" uid="uid://cn7xm5t6sbf8f" path="res://assets/ui/keyboard_mouse/keyboard_d_outline.png" id="13_xu5al"]
[ext_resource type="Texture2D" uid="uid://ercdv0p7e1wd" path="res://assets/ui/keyboard_mouse/keyboard_escape_outline.png" id="14_hvpaj"]
[ext_resource type="Texture2D" uid="uid://b1ba5dbujguwa" path="res://assets/ui/keyboard_mouse/keyboard_s_outline.png" id="15_u58oq"]
[ext_resource type="Texture2D" uid="uid://owe48uv6buf3" path="res://assets/ui/keyboard_mouse/keyboard_w_outline.png" id="16_85lw3"]
[ext_resource type="Texture2D" uid="uid://bkjjhgwkmj130" path="res://assets/ui/keyboard_mouse/mouse_left.png" id="17_riakk"]
[ext_resource type="Texture2D" uid="uid://c8wcabee3wpob" path="res://assets/ui/keyboard_mouse/mouse_move.png" id="18_1e5n8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dmb4f"]
atlas = ExtResource("5_vtifm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaj65"]
atlas = ExtResource("5_vtifm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpgk4"]
atlas = ExtResource("5_vtifm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_miru0"]
atlas = ExtResource("5_vtifm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnh7m"]
atlas = ExtResource("5_vtifm")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6hfj"]
atlas = ExtResource("5_vtifm")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42518"]
atlas = ExtResource("5_vtifm")
region = Rect2(128, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_s6hfj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dmb4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaj65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpgk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miru0")
}],
"loop": true,
"name": &"boomin",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnh7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6hfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42518")
}],
"loop": false,
"name": &"press",
"speed": 10.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_s8g4t")
script = ExtResource("2_806vh")
metadata/_edit_horizontal_guides_ = [796.0, 844.0, 710.0]
metadata/_edit_vertical_guides_ = [251.0, 500.0, 121.0, 1114.0]

[node name="SolidBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.5137255, 0.4627451, 0.6117647, 1)

[node name="TitleScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="TitleScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.18200001
anchor_bottom = 0.18200001
offset_left = 100.0
offset_top = 92.72
offset_right = 1050.0
offset_bottom = 274.72
theme_override_constants/shadow_offset_x = 11
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 181
text = "Let it R.I.P."

[node name="Play" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.33800003
anchor_bottom = 0.33800003
offset_left = 100.0
offset_top = 311.48
offset_right = 257.0
offset_bottom = 391.48
theme_override_font_sizes/font_size = 72
text = "Play"
flat = true
alignment = 0

[node name="Collection" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.44000003
anchor_bottom = 0.44000003
offset_left = 100.0
offset_top = 417.4
offset_right = 401.0
offset_bottom = 497.4
theme_override_font_sizes/font_size = 72
text = "Soul Dex"
flat = true
alignment = 0

[node name="Options" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.54200006
anchor_bottom = 0.54200006
offset_left = 100.0
offset_top = 523.32
offset_right = 347.0
offset_bottom = 603.32
theme_override_font_sizes/font_size = 72
text = "Options"
flat = true
alignment = 0

[node name="HowToPlay" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.64400005
anchor_bottom = 0.64400005
offset_left = 100.0
offset_top = 629.24
offset_right = 474.0
offset_bottom = 709.24
theme_override_font_sizes/font_size = 72
text = "How to Play"
flat = true
alignment = 0

[node name="Credits" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.74500006
anchor_bottom = 0.74500006
offset_left = 100.0
offset_top = 735.2
offset_right = 329.0
offset_bottom = 815.2
theme_override_font_sizes/font_size = 72
text = "Credits"
flat = true
alignment = 0

[node name="Quit" type="Button" parent="TitleScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.84700006
anchor_bottom = 0.84700006
offset_left = 100.0
offset_top = 841.12
offset_right = 270.0
offset_bottom = 921.12
theme_override_font_sizes/font_size = 72
text = "Quit"
flat = true
alignment = 0

[node name="Death" type="AnimatedSprite2D" parent="TitleScreen"]
position = Vector2(1550, 540)
scale = Vector2(10, 10)
sprite_frames = ExtResource("5_ic5we")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.38982445
flip_h = true

[node name="HowToPlay" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="HowToPlay"]
layout_mode = 1
anchors_preset = -1
anchor_top = 4.375
anchor_bottom = 4.375
offset_left = 582.0
offset_top = -75.0
offset_right = 1338.0
offset_bottom = 69.0
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 144
text = "How to Play"

[node name="HowToPlayReturn" type="Button" parent="HowToPlay"]
layout_mode = 1
anchors_preset = -1
anchor_top = 22.875002
anchor_bottom = 22.875002
offset_left = 835.0
offset_top = -40.00006
offset_right = 1086.0
offset_bottom = 39.99994
theme_override_font_sizes/font_size = 72
text = "Return"
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="HowToPlay"]
layout_mode = 1
anchors_preset = -1
anchor_top = 13.512001
anchor_bottom = 13.512001
offset_left = 124.0
offset_top = 169.51996
offset_right = 772.0
offset_bottom = 300.51996
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("6_jscuh")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Move the [color=#1d2b53]Mouse[/color]     to reveal colours [br] Hold [color=#1d2b53]Left Mouse Button[/color]    to slash [br] Press [color=#1d2b53]Escape[/color]    to pause the game [br]"
fit_content = true
autowrap_mode = 0

[node name="WASDLabel" type="RichTextLabel" parent="HowToPlay"]
layout_mode = 1
anchors_preset = -1
anchor_top = 13.512001
anchor_bottom = 13.512001
offset_left = 1113.0
offset_top = 170.51996
offset_right = 1761.0
offset_bottom = 395.51996
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("6_jscuh")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Use [color=#1d2b53]WASD[/color] to move the camera [br] "
fit_content = true
autowrap_mode = 0

[node name="ObjectiveLb" type="RichTextLabel" parent="HowToPlay"]
layout_mode = 1
anchors_preset = -1
anchor_top = 13.512001
anchor_bottom = 13.512001
offset_left = 119.0
offset_top = -228.48004
offset_right = 965.0
offset_bottom = 266.51996
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("6_jscuh")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "The objective is to fill up the [color=#1d2b53]bag[/color] with [color=#1d2b53]souls[/color].
Some are [color=purple]rare[/color] and others [color=yellow]legendary[/color].
They will run from you! [br]
Form [color=#1d2b53]combos[/color] to gain a better score. [br]
Try to beat the [color=#1d2b53]max score[/color] and make [color=#1d2b53]Death[/color] happy! [br]
[br]"
fit_content = true
autowrap_mode = 0

[node name="CombosLb" type="RichTextLabel" parent="HowToPlay"]
layout_mode = 1
anchors_preset = -1
anchor_top = 13.512001
anchor_bottom = 13.512001
offset_left = 1113.0
offset_top = -220.48004
offset_right = 1851.0
offset_bottom = 22.519958
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("6_jscuh")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "3 shapes of the same color = [color=#1d2b53]40 points[/color] [br]

4 shapes of the same color = [color=#1d2b53]80 points[/color] [br]

6 colors with the same shape = [color=#1d2b53]180 points[/color]"
fit_content = true
autowrap_mode = 0

[node name="BoomBoxLb" type="RichTextLabel" parent="HowToPlay"]
layout_mode = 1
anchors_preset = -1
anchor_top = 13.512001
anchor_bottom = 13.512001
offset_left = 1238.0
offset_top = 472.51996
offset_right = 2048.0
offset_bottom = 697.51996
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("6_jscuh")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[color=#1d2b53]Click[/color] the         to change the song!"
fit_content = true
autowrap_mode = 0

[node name="BoomBox" type="AnimatedSprite2D" parent="HowToPlay"]
position = Vector2(1481, 1026)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_s6hfj")
animation = &"boomin"
autoplay = "boomin"
frame = 3
frame_progress = 1.0

[node name="ThreeCombo" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1252, 399)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_xwlnd")

[node name="FourCombo" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1288, 526)
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_vtifm")

[node name="6Combo" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1358, 645)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_bech7")

[node name="KeyboardArrowDownOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1482, 825)
texture = ExtResource("8_5867a")

[node name="KeyboardArrowLeftOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1434, 825)
texture = ExtResource("9_5ec7j")

[node name="KeyboardArrowRightOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1530, 825)
texture = ExtResource("10_xe83y")

[node name="KeyboardArrowUpOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1482, 778)
texture = ExtResource("11_cbumv")

[node name="KeyboardAOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1185, 823)
texture = ExtResource("12_wiq5b")

[node name="KeyboardDOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1281, 823)
texture = ExtResource("13_xu5al")

[node name="KeyboardSOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1233, 823)
texture = ExtResource("15_u58oq")

[node name="KeyboardWOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(1233, 776)
texture = ExtResource("16_85lw3")

[node name="KeyboardEscapeOutline" type="Sprite2D" parent="HowToPlay"]
position = Vector2(377, 823)
texture = ExtResource("14_hvpaj")

[node name="MouseLeft" type="Sprite2D" parent="HowToPlay"]
position = Vector2(557, 776)
texture = ExtResource("17_riakk")

[node name="MouseMove" type="Sprite2D" parent="HowToPlay"]
position = Vector2(423, 727)
scale = Vector2(1.2, 1.2)
texture = ExtResource("18_1e5n8")

[node name="Credits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_top = 4.375
anchor_bottom = 4.375
offset_left = 740.0
offset_top = -75.0
offset_right = 1181.0
offset_bottom = 69.0
theme_override_constants/shadow_offset_x = 9
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 144
text = "Credits"

[node name="CreditsVBox" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_top = 13.500001
anchor_bottom = 13.500001
offset_left = 797.0
offset_top = -258.00006
offset_right = 1124.0
offset_bottom = 257.99994

[node name="Artist" type="Label" parent="Credits/CreditsVBox"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 48
text = "Artist"

[node name="HSeparator5" type="HSeparator" parent="Credits/CreditsVBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="ArtHbox" type="HBoxContainer" parent="Credits/CreditsVBox"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Credits/CreditsVBox/ArtHbox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ArtistName" type="Label" parent="Credits/CreditsVBox/ArtHbox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("6_jscuh")
theme_override_font_sizes/font_size = 36
text = "Pedro Valerio"

[node name="HSeparator" type="HSeparator" parent="Credits/CreditsVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Developers" type="Label" parent="Credits/CreditsVBox"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 48
text = "Developers"

[node name="HSeparator3" type="HSeparator" parent="Credits/CreditsVBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="DevHBox" type="HBoxContainer" parent="Credits/CreditsVBox"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Credits/CreditsVBox/DevHBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="DeveloperNames" type="Label" parent="Credits/CreditsVBox/DevHBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_constants/line_spacing = 6
theme_override_fonts/font = ExtResource("6_jscuh")
theme_override_font_sizes/font_size = 36
text = "Daniel Francisco
Francisco Pinto
Luis Chaves
Miguel Monteiro
Pedro Valerio"

[node name="HSeparator2" type="HSeparator" parent="Credits/CreditsVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SoundDesigner" type="Label" parent="Credits/CreditsVBox"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 0
theme_override_font_sizes/font_size = 48
text = "Sound Designer"

[node name="HSeparator4" type="HSeparator" parent="Credits/CreditsVBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="SoundHBox" type="HBoxContainer" parent="Credits/CreditsVBox"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Credits/CreditsVBox/SoundHBox"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="SoundDesignName" type="Label" parent="Credits/CreditsVBox/SoundHBox"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("6_jscuh")
theme_override_font_sizes/font_size = 36
text = "Francisco Pinto"

[node name="CreditsReturn" type="Button" parent="Credits"]
layout_mode = 1
anchors_preset = -1
anchor_top = 22.875002
anchor_bottom = 22.875002
offset_left = 835.0
offset_top = -40.00006
offset_right = 1086.0
offset_bottom = 39.99994
theme_override_font_sizes/font_size = 72
text = "Return"
flat = true

[node name="DexMenu" parent="." instance=ExtResource("4_uc5nx")]
visible = false
layout_mode = 1

[node name="OptionsMenu" parent="." instance=ExtResource("6_uc5nx")]
visible = false
layout_mode = 1

[connection signal="mouse_entered" from="TitleScreen/Play" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Play" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="TitleScreen/Collection" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Collection" to="." method="_on_collection_button_pressed"]
[connection signal="mouse_entered" from="TitleScreen/Options" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Options" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="TitleScreen/HowToPlay" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/HowToPlay" to="." method="_on_how_to_play_button_pressed"]
[connection signal="mouse_entered" from="TitleScreen/Credits" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Credits" to="." method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="TitleScreen/Quit" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="TitleScreen/Quit" to="." method="_on_quit_button_pressed"]
[connection signal="mouse_entered" from="HowToPlay/HowToPlayReturn" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="HowToPlay/HowToPlayReturn" to="." method="_on_how_to_play_return_pressed"]
[connection signal="mouse_entered" from="Credits/CreditsReturn" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Credits/CreditsReturn" to="." method="_on_credits_return_pressed"]
